--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.9
   cupertino_icons: ^1.0.6
+  auto_route: ^7.8.4
+  talker_flutter: ^3.6.0
+  talker_bloc_logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +30,8 @@ dev_dependencies:
   build_runner: ^2.4.8
   injectable_generator: ^2.4.1
   hive_generator: ^2.0.1
+  auto_route_generator: ^7.3.2
+
 
 flutter:
   generate: true
